--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-scripts": "^5.0.1"
